--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,7 @@ process {
     cache = 'lenient'
     errorStrategy = 'retry'
     maxRetries = 1
+    executor = "awsbatch"
 }
 params {
     aggregate_files = "s3://512426816668-gel-data-resources/aggregate_gVCF_strelka/gel_mainProgramme_aggV2/genomic/temporary/all_chunks_merged_norm_chr1_154223397_156709242.bcf"
