--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ process {
 }
 params {
     aggregate_files = "s3://512426816668-gel-data-resources/aggregate_gVCF_strelka/gel_mainProgramme_aggV2/genomic/temporary/all_chunks_merged_norm_chr1_154223397_156709242.bcf"
-    final_sample_list = "78388_final_platekeys_agg_v9_20200620.txt"
+    final_sample_list = "$baseDir/78388_final_platekeys_agg_v9_20200620.txt"
     reference = "s3://public-genomes/GRCh38_full_analysis_set_plus_decoy_hla.fa"
     threads = 32
 }
